syntax = "proto3";

package trip;

option go_package = "github.com/uit-go/grpc/trip";

service TripService {
  rpc GetTrip(GetTripRequest) returns (TripResponse);
  rpc GetTripsByUser(GetTripsByUserRequest) returns (GetTripsByUserResponse);
  rpc UpdateTripStatus(UpdateTripStatusRequest) returns (UpdateTripStatusResponse);
}

message GetTripRequest {
  int64 trip_id = 1;
}

message TripInfo {
  int64 id = 1;
  int64 passenger_id = 2;
  int64 driver_id = 3;
  string status = 4;
  string pickup_location = 5;
  string destination = 6;
  double pickup_latitude = 7;
  double pickup_longitude = 8;
  double destination_latitude = 9;
  double destination_longitude = 10;
  double fare = 11;
  string created_at = 12;
  string updated_at = 13;
}

message TripResponse {
  TripInfo trip = 1;
}

message GetTripsByUserRequest {
  int64 user_id = 1;
  string user_type = 2; // "PASSENGER" or "DRIVER"
}

message GetTripsByUserResponse {
  repeated TripInfo trips = 1;
}

message UpdateTripStatusRequest {
  int64 trip_id = 1;
  string status = 2;
}

message UpdateTripStatusResponse {
  bool success = 1;
  string message = 2;
}